# ai-id

./: .gitignore  Cargo.toml  Makefile  README.md
aiid/: Cargo.toml  README.md
aiid-js/: README.md  karma.conf.js  package-lock.json  package.json
aiid-js/lib/: encoding.test.js
aiid-js/lib/browser/: bindgen.js  bindgen_bg.js
aiid-js/rust/: Cargo.toml
aiid-js/rust/src/: lib.rs
aiid/src/: b32.rs  error.rs  lib.rs  util.rs
aiid/tests/: integration.rs
test/: fixtures.json
