[package]
name = "aiid_js"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>"]
version = "0.0.2"
edition = "2021"
rust-version = "1.70"
description = "AIngle encoding scheme for keys, agents, identifiers, etc"
keywords = ["base32", "encoding", "decoding", "erasure", "reed-solomon"]
categories = ["encoding"]
license = "Apache-2.0"

[lib]
name = "aiid_js"
crate-type = ["cdylib"]

[dependencies]
aiid = { path = "../../aiid" }
wasm-bindgen = "0.2"

# Use lol_alloc instead of deprecated wee_alloc
[target.'cfg(target_arch = "wasm32")'.dependencies]
lol_alloc = "0.4"
