[package]
name = "aingle-id-js"
authors = [ "Apilium Technologies <hello@apilium.com>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
description = "AIngle encoding scheme for keys, agents, identifiers - WASM bindings"
keywords = ["aingle", "base32", "encoding", "decoding", "wasm"]
categories = ["encoding", "wasm"]
license = "Apache-2.0"

[lib]
name = "aingle_id_js"
crate-type = ["cdylib"]

[dependencies]
aingle-id = { path = "../../aiid" }
wasm-bindgen = "0.2"

# Use lol_alloc instead of deprecated wee_alloc
[target.'cfg(target_arch = "wasm32")'.dependencies]
lol_alloc = "0.4"
